@@ -30,11 +30,13 @@ namespace Rcpp{
 		switch( TYPEOF( x ) ){
 			case LGLSXP:
 				setSEXP( x ) ;
+				update() ;
 				break ;
 			case RAWSXP:
 			case INTSXP:
 			case REALSXP:
 				setSEXP( Rf_coerceVector( x, LGLSXP) ) ;
+				update();
 				break ;
 			default:
 				throw not_compatible( "cannot convert to intrger vector" ) ;
@@ -43,6 +45,7 @@ namespace Rcpp{
 	
 	LogicalVector::LogicalVector(int size) : VectorBase() {
 		setSEXP( Rf_allocVector(LGLSXP, size) ) ;
+		update() ;
 	}
 
 #ifdef HAS_INIT_LISTS
@@ -50,18 +53,21 @@ namespace Rcpp{
 		SEXP x = PROTECT( Rf_allocVector( INTSXP, list.size() ) ) ;
 		std::copy( list.begin(), list.end(), INTEGER(x) ); 
 		setSEXP( Rf_coerceVector( x, LGLSXP ) ) ;
+		update() ;
 		UNPROTECT( 1 ); /* x */
 	}
 	LogicalVector::LogicalVector( std::initializer_list<Rboolean> list ): VectorBase() {
 		SEXP x = PROTECT( Rf_allocVector( LGLSXP, list.size() ) ) ;
 		std::copy( list.begin(), list.end(), LOGICAL(x) ); 
 		setSEXP(x) ;
+		update() ;
 		UNPROTECT( 1 ); /* x */
 	}
 	LogicalVector::LogicalVector( std::initializer_list<bool> list ) : VectorBase(){
 		SEXP x = PROTECT( Rf_allocVector( LGLSXP, list.size() ) ) ;
 		std::copy( list.begin(), list.end(), LOGICAL(x) ); 
 		setSEXP(x) ;
+		update() ;
 		UNPROTECT( 1 ); /* x */
 	}
 #endif
